@@ -1,3 +1,6 @@
+  - Add a $VERSION varialbe for Error::Simple.
+    - thanks to Kevin Dawson for the report.
+
 Feb 11 2012 <shlomif@shlomifish.org> (Shlomi Fish)
 
   - Bleadperl broke Error.pm's tests - 
